fixing issue in default template for format values

--- a/templates/mrtswath.params.erb
+++ b/templates/mrtswath.params.erb
@@ -12,7 +12,7 @@ OUTPUT_SPACE_LOWER_RIGHT_CORNER (X Y) = 1705840.453 -139927.121
 
 OUTPUT_FILENAME = "<%= @config[:output] %>"
 
-OUTPUT_FILE_FORMAT = "<%= @config[:format] %>"
+OUTPUT_FILE_FORMAT = <%= @config[:format] %>
 
 KERNEL_TYPE (CC/BI/NN) = NN
 
