new band options for the mrtswath command

--- a/templates/mrtswath.params.erb
+++ b/templates/mrtswath.params.erb
@@ -2,7 +2,7 @@ INPUT_FILENAME = "<%= @config[:input] %>"
 
 GEOLOCATION_FILENAME = "<%= @config[:geofile] %>"
 
-INPUT_SDS_NAME = <%= @config[:input_sds] %>
+INPUT_SDS_NAME = <%= @config[:band_name] %>, <%= @config[:bands] %>
 
 OUTPUT_SPATIAL_SUBSET_TYPE = PROJ_COORDS
 
